--- a/app/src/main/res/layout/activity_video_player.xml
+++ b/app/src/main/res/layout/activity_video_player.xml
@@ -6,4 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".activity.VideoPlayerActivity">
 
+    <com.imorning.mediaplayer.player.video.VideoPlayer
+        android:id="@+id/video_player"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
